--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "/src/scripts/index.js",
+  "homepage": "https://danuprasetyaa.github.io/Belajar-Pengembangan-Web-Intermediate/",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "serve": "http-server dist"
+    "serve": "http-server dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.4",
     "http-server": "^14.1.1",
     "lite-server": "^2.6.1",
@@ -148,6 +152,7 @@
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
+    "workbox-precaching": "^7.3.0",
     "wrap-ansi": "^7.0.0",
     "ws": "^8.17.1",
     "xmlhttprequest-ssl": "^2.1.2",
